--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,10 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
+    <script src ="/js/game.js"></script>
     <script src ="/js/index.js"></script>
+    
+    <!-- <script src ="/public/js/nevsky-game.js"></script> -->
+    <!-- <script src ="/server/nevsky-game.js"></script> -->
 </body>
 </html>
