--- a/public/chat.html
+++ b/public/chat.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
     <link rel="stylesheet" href="/css/styles.css">
     <title>Chat | ChatApp</title>
 </head>
@@ -15,6 +16,8 @@
     </div>
 
     <div class="chat__main">
+        <div id="intro_message" class="chat__intro__messages"></div>
+        <hr>
         <ol id="messages" class="chat__messages"></ol>
 
         <div class="chat__footer">
